# spectrum

./: .gitignore  package-lock.json  package.json
acquisition/: README.md  pyproject.toml  test_main_rgb_hw.py
acquisition/spectrum_acq/: __init__.py  cli.py  config.py  models.py  paths.py
acquisition/spectrum_acq/api/: __init__.py  app.py  auth.py  h1_routes.py
acquisition/spectrum_acq/calibration/: __init__.py
acquisition/spectrum_acq/capture/: __init__.py  coordinator.py
acquisition/spectrum_acq/devices/: __init__.py  h1.py  h1_cie.py  h1_serialize.py  interfaces.py  main_rgb.py  mock.py  realsense.py  streaming.py
acquisition/spectrum_acq/geometry/: __init__.py  pointcloud.py
acquisition/spectrum_acq/storage/: __init__.py  ply.py  sample_store.py  sqlite_index.py
acquisition/tests/: test_api.py  test_capture_preempt.py  test_cli.py  test_geometry.py  test_h1_auto_exposure.py  test_h1_stream_bridge.py  test_imu.py  test_main_rgb_camera.py  test_main_rgb_image_serialization.py  test_mock_capture.py  test_models.py  test_realsense_camera.py  test_sqlite_rebuild.py  test_storage_atomicity.py  test_streaming.py
deploy/systemd/user/: spectrum-acq.service  spectrum-webui.service
docs/: PROTOCOL.md  audit-followups.md
docs/hardware/: croprix-spectrum-env.md  leaf-capture-runbook.md
docs/superpowers/plans/: 2026-05-31-raspberry-pi-leaf-multimodal-capture-implementation-plan.md
docs/superpowers/specs/: 2026-05-26-h1-sdk-design.md  2026-05-31-acquisition-sample-preview-design.md  2026-05-31-raspberry-pi-leaf-multimodal-capture-design.md  2026-06-01-h1-acquisition-gateway-design.md
scripts/: pi_collect_env.sh  pi_d455_smoke.py  pi_fix_d455_imu_permissions.sh  pi_h1_smoke.py  pi_main_rgb_smoke.py  pi_setup_dev.sh  pi_start_capture_stack.sh  pi_stop_capture_stack.sh
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: 01_device_info.cpp  02_capture_once.cpp  03_stream.cpp  04_exposure_control.cpp  05_efficiency_curve.cpp  cli.cpp
sdk/cpp/include/h1/: Device.hpp  Errors.hpp  ISerialPort.hpp  Types.hpp
sdk/cpp/src/: Device.cpp  Framing.cpp  Framing.hpp  Protocol.cpp  Protocol.hpp  Types.cpp  UnixSerialPort.cpp  WinSerialPort.cpp
sdk/cpp/tests/: HexUtils.hpp  MockSerialPort.hpp  main.cpp  test_device.cpp  test_protocol_decode.cpp  test_protocol_encode.cpp  test_spectrum_frame.cpp
sdk/esp32/h1_full/: CMakeLists.txt  sdkconfig.defaults
sdk/esp32/h1_full/components/h1_sdk/: CMakeLists.txt
sdk/esp32/h1_full/components/h1_sdk/include/h1/: Esp32SerialPort.hpp
sdk/esp32/h1_full/components/h1_sdk/src/: Esp32SerialPort.cpp
sdk/esp32/h1_full/main/: CMakeLists.txt  main.cpp
sdk/esp32/h1_minimal/: h1_minimal.ino
sdk/nodejs/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
sdk/nodejs/examples/: 01_device_info.ts  02_capture_once.ts  03_stream.ts  04_exposure_control.ts  05_efficiency_curve.ts
sdk/nodejs/src/: cli.ts  device.ts  errors.ts  index.ts  mock.ts  protocol.ts  types.ts
sdk/nodejs/test/: device.test.ts  protocol.decode.test.ts  protocol.encode.test.ts  spectrum.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: 01_device_info.py  02_capture_once.py  03_stream.py  04_exposure_control.py  05_efficiency_curve.py
sdk/python/h1_sdk/: __init__.py  cli.py  device.py  errors.py  mock.py  protocol.py  types.py
sdk/python/tests/: test_cli.py  test_device_async.py  test_device_sync.py  test_protocol_decode.py  test_protocol_encode.py  test_spectrum_frame.py
webui/: README.md  next.config.ts  package.json
webui/src/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
webui/src/app/acquisition/: page.tsx
webui/src/app/api/acquisition/[...path]/: route.ts
webui/src/app/api/connection/: route.ts
webui/src/app/api/device/capture/: route.ts
webui/src/app/api/device/cie-mode/: route.ts
webui/src/app/api/device/efficiency-curve/: route.ts
webui/src/app/api/device/efficiency-curve/reset/: route.ts
webui/src/app/api/device/efficiency-curve/verify/: route.ts
webui/src/app/api/device/exposure/: route.ts
webui/src/app/api/device/info/: route.ts
webui/src/app/api/device/sleep/: route.ts
webui/src/app/api/device/stream/: route.ts
webui/src/app/api/device/stream/stop/: route.ts
webui/src/app/api/device/wake/: route.ts
webui/src/app/api/device/working-mode/: route.ts
webui/src/app/api/logs/: route.ts
webui/src/app/api/logs/clear/: route.ts
webui/src/app/api/logs/pause/: route.ts
webui/src/app/capture/: page.tsx
webui/src/app/curve/: page.tsx
webui/src/app/debug/: page.tsx
webui/src/app/logs/: page.tsx
webui/src/app/settings/: page.tsx
webui/src/app/stream/: page.tsx
webui/src/components/: app-sidebar.tsx  connection-bar.tsx  nir-card.tsx  photometric-grid.tsx  plant-params-card.tsx  spectrum-chart.tsx  status-badge.tsx  theme-provider.tsx  theme-toggle.tsx  tm30-section.tsx
webui/src/components/acquisition/: d455-attitude-indicator.tsx  sample-preview-sheet.tsx  spectrometer-live-panel.tsx
webui/src/hooks/: use-mobile.ts
webui/src/lib/: acquisition-client.ts  acquisition-proxy.ts  api-client.ts  api-errors.ts  device-manager.ts  format.ts  log-capture.ts  mock-data.ts  serialize.ts  sse.ts
webui/src/store/: connection.ts
