[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "spectrum-acq"
version = "0.1.0"
description = "Acquisition service for Raspberry Pi leaf multimodal capture"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Croprix" }]
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.26",
    "pillow>=10.0",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
hardware = [
    "pyserial>=3.5",
    "pyrealsense2>=2.58; platform_system == 'Linux' and platform_machine == 'aarch64'",
]

[project.scripts]
spectrum-acq = "spectrum_acq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["spectrum_acq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
